[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "output"
path = "src/output.rs"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
env_logger = "0.10.0"
indicatif = "0.17.5"
log = "0.4.19"

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
